# pythonix

./: .editorconfig  .gitignore  README.md  default.nix  flake.nix  meson.build  shell.nix
.github/workflows/: test.yml
src/: eval.cc  expr.cc  meson.build  nix-to-python.cc  nix.cpp  python-module.cc  python-to-nix.cc
src/internal/: errors.hh  expr.hh  nix-to-python.hh  ptr.hh  python-to-nix.hh
